# python-modules

./: .env  test.py
module-0/ex0/: ft_hello_garden.py
module-0/ex1/: ft_plot_area.py
module-0/ex2/: ft_harvest_total.py
module-0/ex3/: ft_plant_age.py
module-0/ex4/: ft_water_reminder.py
module-0/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
module-0/ex6/: ft_garden_summary.py
module-0/ex7/: ft_seed_inventory.py
module-1/ex0/: ft_garden_intro.py
module-1/ex1/: ft_garden_data.py
module-1/ex2/: ft_plant_growth.py
module-1/ex3/:  ft_plant_factory.py  ft_plant_factory.py
module-1/ex4/: ft_garden_security.py
module-1/ex5/: ft_plant_types.py
module-1/ex6/: ft_garden_analytics.py
module-10/: README.md
module-10/ex0/: lambda_spells.py
module-10/ex1/: higher_magic.py
module-10/ex2/: scope_mysteries.py
module-10/ex3/: functools_artifacts.py
module-10/ex4/: decorator_mastery.py
module-2/ex0/: ft_first_exception.py
module-2/ex1/: ft_different_errors.py
module-2/ex2/: ft_custom_errors.py
module-2/ex3/: ft_finally_block.py
module-2/ex4/: ft_raise_errors.py
module-2/ex5/: ft_garden_management.py
module-3/: README.md
module-3/ex0/: ft_command_quest.py
module-3/ex1/: ft_score_analytics.py
module-3/ex2/: ft_coordinate_system.py
module-3/ex5/: ft_data_stream.py
module-4/: README.md
module-5/: README.md
module-6/: README.md  ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
module-7/: README.md
module-8/ex1/: loading.py  pyproject.toml
module-9/: README.md
(+51 files in other folders)
