[tool.poetry]
name = "matrix-loading-programs"
version = "0.1.0"
description = "Matrix data analysis tool demonstrating dependency management"
authors = ["Neo <neo@thematrix.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
loading = "loading:main"
